# Electrum

./: CMakeLists.txt  LICENSE  README.md
misc/: electrum.codestyle.json
src/: CMakeLists.txt
src/compiler/: Analyzer.cpp  Analyzer.h  CMakeLists.txt  Compiler.cpp  Compiler.h  CompilerContext.cpp  CompilerContext.h  CompilerExceptions.h  ElectrumJit.cpp  ElectrumJit.h  EvaluationPhase.h  JitMemoryManager.cpp  JitMemoryManager.h  Namespace.h  NamespaceManager.cpp  NamespaceManager.h  Parser.cpp  Parser.h  TypeBuilder.cpp  TypeBuilder.h  main.cpp
src/compiler/types/: Types.h
src/include/types/: Types.h
src/interpreter/: CMakeLists.txt  Interpreter.cpp  Interpreter.h  InterpreterExceptions.h
src/lexer/: CMakeLists.txt  LexerDefs.h  electrum_lexer.l
src/lib/: CMakeLists.txt
src/lib/immer/immer/: array.hpp  array_transient.hpp  atom.hpp  box.hpp  flex_vector.hpp  flex_vector_transient.hpp  map.hpp  map_transient.hpp  memory_policy.hpp  set.hpp  set_transient.hpp  vector.hpp  vector_transient.hpp
src/lib/immer/immer/detail/: util.hpp
src/lib/immer/immer/detail/arrays/: no_capacity.hpp  node.hpp  with_capacity.hpp
src/lib/immer/immer/detail/hamts/: champ.hpp  champ_iterator.hpp  node.hpp
src/lib/immer/immer/detail/rbts/: node.hpp  operations.hpp  position.hpp  rbtree.hpp  rbtree_iterator.hpp  rrbtree.hpp  rrbtree_iterator.hpp  visitor.hpp
src/lib/immer/immer/experimental/: dvektor.hpp
src/lib/immer/immer/experimental/detail/: dvektor_impl.hpp
src/lib/immer/immer/heap/: debug_size_heap.hpp  free_list_heap.hpp  free_list_node.hpp  gc_heap.hpp  heap_policy.hpp  malloc_heap.hpp  thread_local_free_list_heap.hpp  unsafe_free_list_heap.hpp
src/lib/immer/immer/refcount/: enable_intrusive_ptr.hpp  refcount_policy.hpp  unsafe_refcount_policy.hpp
src/lib/immer/immer/transience/: gc_transience_policy.hpp
src/repl/: CMakeLists.txt  main.cpp
src/runtime/: CMakeLists.txt  Dwarf_eh.cpp  Dwarf_eh.h  EHashTable.c  EHashTable.h  ENamespace.cpp  ENamespace.h  ExprPrinter.cpp  ExprPrinter.h  GarbageCollector.cpp  GarbageCollector.h  Runtime.cpp  Runtime.h  apply.cpp  generate.c  hash_table.c
stdlib/: stdlib.el
test/: CMakeLists.txt
test/unit_tests/: CMakeLists.txt  LexerHelpers.h  test_NamespaceManager.cpp  test_analyzer.cpp  test_compiler.cpp  test_gc.cpp  test_interpreter.cpp  test_lexer.cpp  test_parser.cpp
